--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 							<p>This applet was done as a project in order to learn C++.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/" class="image"><img src="images/" alt="Quadratic Equations" style="width:300px;height:200px;"/></a>
+							<a href="images/quadratic_equations.jpg" class="image"><img src="images/quadratic_equations.jpg" alt="Quadratic Equations" style="width:300px;height:200px;"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/python_code/quadratic_equations.py">Quadratic Equations</a></h2>
 							<p>This applet was done as a project in order to learn Python.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" style="width:300px;height:200px;"/></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/invoice.jpg" class="image"><img src="images/invoice.jpg" alt="Invoice" style="width:300px;height:200px;"/></a>
+							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Invoice.java">Invoices</a></h2>
+							<p>This applet was done as a project in order to learn Java.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects" style="width:300px;height:200px;"/></a>
