--- a/index.html
+++ b/index.html
@@ -32,60 +32,60 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/restaurant.jpg" class="image"><img src="images/bootcamp2_website.jpg" alt="bon appetit!" style="width:300px;height:200px"/></a>
+							<a href="images/restaurant.jpg" class="image"><img src="images/bootcamp2_website.jpg" alt="bon appetit!"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Restaurant/index.html">Restaurant</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/pet_store.jpg" class="image"><img src="images/pet_store.jpg" alt="Pet Store" style="width:300px;height:200px"/></a>
+							<a href="images/pet_store.jpg" class="image"><img src="images/pet_store.jpg" alt="Pet Store"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/pet%20store/index.html">Pet Store</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>">
 						</article>
 						<article class="thumb">
-							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Bootcamp 1 Page" style="width:300px;height:200px"/></a>
+							<a href="images/bootcamp_website_contact.jpg" class="image"><img src="images/bootcamp_website.jpg" alt="Bootcamp 1 Page"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/Bootcamp%201/workspace/index.html">Bootcamp 1 Website</a></h2>
 							<p>This site was designed during a bootcamp course with Bitwise Industries' Geekwise Academy.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/challenge_db.jpg" class="image"><img src="images/challenge_website.jpg" alt="Challenge Page" style="width:300px;height:200px"/></a>
+							<a href="images/challenge_db.jpg" class="image"><img src="images/challenge_website.jpg" alt="Challenge Page"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/tree/master/resume_paul_garduque/workspace">Challenge Website</a></h2>
 							<p>This site was designed as a challenge for DPS Telecom.</p>
 						<article class="thumb">
-							<a href="images/calculator.jpg" class="image"><img src="images/calculator.jpg" alt="Calculator" style="width:300px;height:200px"/></a>
+							<a href="images/calculator.jpg" class="image"><img src="images/calculator.jpg" alt="Calculator"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Calculator.java">Calculator Assignment</a></h2>
 							<p>This applet was done as a project for DeVry University.</p>						</article>
 						<article class="thumb">
-							<a href="images/sales_receipt.jpg" class="image"><img src="images/sales_receipt.jpg" alt="Sales Tax" style="width:300px;height:200px"/></a>
+							<a href="images/sales_receipt.jpg" class="image"><img src="images/sales_receipt.jpg" alt="Sales Tax"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/ruby_code/print_receipt.rb">Sales Tax Program</a></h2>
 							<p>This applet was done as a project in order to learn Ruby.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/math_operations.jpg" class="image"><img src="images/math_operations.jpg" alt="Math Operations" style="width:300px;height:200px"/></a>
+							<a href="images/math_operations.jpg" class="image"><img src="images/math_operations.jpg" alt="Math Operations"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/c_code/math%20operators.c">Math Operations</a></h2>
 							<p>This applet was done as a project in order to learn C.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/screensaver.jpg" class="image"><img src="images/screensaver.jpg" alt="Screensaver" style="width:300px;height:200px"/></a>
+							<a href="images/screensaver.jpg" class="image"><img src="images/screensaver.jpg" alt="Screensaver"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Saver.java">Screen Saver</a></h2>
 							<p>This applet was done as a project in order to learn Java.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/account.jpg" class="image"><img src="images/account.jpg" alt="Savings Account" style="width:300px;height:200px"/></a>
+							<a href="images/account.jpg" class="image"><img src="images/account.jpg" alt="Savings Account"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/c%2B%2B_code/C%2B%2B%20Project%204.txt">Savings Account</a></h2>
 							<p>This applet was done as a project in order to learn C++.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/quadratic_equations.jpg" class="image"><img src="images/quadratic_equations.jpg" alt="Quadratic Equations" style="width:300px;height:200px"/></a>
+							<a href="images/quadratic_equations.jpg" class="image"><img src="images/quadratic_equations.jpg" alt="Quadratic Equations"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/python_code/quadratic_equations.py">Quadratic Equations</a></h2>
 							<p>This applet was done as a project in order to learn Python.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/invoice.jpg" class="image"><img src="images/invoice.jpg" alt="Invoice" style="width:300px;height:200px"/></a>
+							<a href="images/invoice.jpg" class="image"><img src="images/invoice.jpg" alt="Invoice"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Invoice.java">Invoices</a></h2>
 							<p>This applet was done as a project in order to learn Java.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects" style="width:300px;height:200px"/></a>
+							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio">Future projects</a></h2>
 							<p>This links to our GitHub Page, where all future projects will reside.....</p>">
 						</article>
