--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<article class="thumb">
 							<a href="images/question_mark.jpg" class="image"><img src="images/question_mark.jpg" alt="Future Projects"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio">Future projects</a></h2>
-							<p>This links to our GitHub Page, where all future projects will reside.....</p>">
+							<p>This links to our GitHub Page, where all future projects will reside.....</p>
 						</article>
 					</div>
 
