--- a/index.html
+++ b/index.html
@@ -50,17 +50,19 @@
 							<a href="images/challenge_db.jpg" class="image"><img src="images/challenge_website.jpg" alt="Challenge Page"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/tree/master/resume_paul_garduque/workspace">Challenge Website</a></h2>
 							<p>This site was designed as a challenge for DPS Telecom.</p>
+						</article>
 						<article class="thumb">
 							<a href="images/calculator.jpg" class="image"><img src="images/calculator.jpg" alt="Calculator"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/java_code/Calculator.java">Calculator Assignment</a></h2>
-							<p>This applet was done as a project for DeVry University.</p>						</article>
+							<p>This applet was done as a project for DeVry University.</p>
+						</article>
 						<article class="thumb">
 							<a href="images/sales_receipt.jpg" class="image"><img src="images/sales_receipt.jpg" alt="Sales Tax"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/ruby_code/print_receipt.rb">Sales Tax Program</a></h2>
 							<p>This applet was done as a project in order to learn Ruby.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/math_operations.jpg" class="image"><img src="images/math_operations.jpg" alt="Math Operations"/></a>
+							<a href="images/math_operations.jpg" class="image"><img src="images/Smath_operations.jpg" alt="Math Operations"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/c_code/math%20operators.c">Math Operations</a></h2>
 							<p>This applet was done as a project in order to learn C.</p>
 						</article>
