--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<p>This applet was done as a project in order to learn Ruby.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/math_operations.jpg" class="image"><img src="images/Smath_operations.jpg" alt="Math Operations"/></a>
+							<a href="images/math_operations.jpg" class="image"><img src="images/math_operations.jpg" alt="Math Operations"/></a>
 							<h2><a href="https://github.com/pgarduque/code-portfolio/blob/master/c_code/math%20operators.c">Math Operations</a></h2>
 							<p>This applet was done as a project in order to learn C.</p>
 						</article>
