--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Portfolio</strong> by Paul Garduque</a></h1>
+						<h1><a href="index.html"><strong>Portfolio</strong> by Paul G.</a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
